@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fixed bug where json was improperly decoded for fetch plugins that use temp files (gh#4,gh#5)
+  - Added a number of unit tests (gh#2, gh#5)
+  - Fixed bug where version wasn't being correctly parsed from the index (gh#1, gh#5)
 
 0.02      2019-04-08 21:14:57 -0400
   - Update documentation.
